--- a/static/unknown-jobs/index.html
+++ b/static/unknown-jobs/index.html
@@ -6,7 +6,9 @@
     <title>Unknown Jobs Review</title>
     <style>
       body { font-family: Arial, sans-serif; margin: 24px; color: #222; }
-      h1 { margin: 0 0 12px; font-size: 20px; }
+      .title-row { display: flex; align-items: center; gap: 14px; margin-bottom: 12px; }
+      h1 { margin: 0; font-size: 20px; }
+      .total-jobs { font-size: 14px; color: #444; background: #f3f3f3; border: 1px solid #ddd; border-radius: 999px; padding: 4px 10px; }
       .meta { margin-bottom: 16px; color: #666; }
       .job { border: 1px solid #ddd; border-radius: 8px; padding: 12px; margin-bottom: 10px; display: flex; gap: 12px; align-items: center; }
       .job-info { flex: 1; min-width: 0; }
@@ -24,7 +26,10 @@
     </style>
   </head>
   <body>
-    <h1>Unknown Jobs Review</h1>
+    <div class="title-row">
+      <h1>Unknown Jobs Review</h1>
+      <div class="total-jobs">Total Jobs: <span id="totalJobs">0</span></div>
+    </div>
     <div class="meta">Click link to open, then approve or reject.</div>
     <div class="bulk hidden" id="bulkBar">
       <label class="select-all">
